[package]
name = "kaiburr"
version = "0.1.0"
authors = ["Ernest Romero Climent <ernest@unstable.build>"]
build = "build.rs"

[lib]
name = "kaiburr_lib"
path = "src/lib.rs"

[[bin]]
name = "kaiburr"
path = "src/main.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "*", optional = true }
syntex = "*"

[dependencies]
serde = "*"
serde_json = "*"
serde_macros = { version = "*", optional = true }
websocket = "0.14.0"
hyper = "0.7"
env_logger = "*"
log = "*"
